# easydex_back

./: README.md  pyproject.toml  requirements.txt
django/: .env  .gitignore  db.sqlite3  manage.py  requirements.txt
django/account/: models.py  serializers.py  urls.py  views.py
django/account/migrations/: 0001_initial.py  0002_remove_userprofile_dex.py
django/dexmanager/: admin.py  apps.py  codes.py  dftools.py  ecos.py  models.py  operator.py  serializers.py  urls.py  utils.py  views.py
django/dexmanager/migrations/: 0001_initial.py  0002_srcdex_userdex_delete_dex_srcdex_watching_users.py  0003_rename_dex_userdex_srcdex.py  0004_remove_srcdex_watching_users_srcdex_closing_and_more.py  0004_srcdex_category_srcdex_closing_srcdex_description_and_more.py  0005_srcdex_category_srcdex_description_srcdex_isinvest_and_more.py  0006_srcdex_url.py  0007_alter_srcdex_tags.py  0008_alter_srcdex_tags.py  0009_merge_20230720_2202.py  0010_alter_srcdex_tags.py  0011_alter_srcdex_description.py  0011_alter_srcdex_tags.py  0012_srcdex_search_keyword.py  0013_hankyungtitle.py  0014_srcdex_unit_alter_srcdex_category_and_more.py  0015_remove_hankyungtitle_page_hankyungtitle_content.py  0016_srcdex_reduced_title.py  0017_srcdex_period.py  0018_merge_0011_alter_srcdex_tags_0017_srcdex_period.py
django/dexmanager/newsdata/: contents.txt  summaries.txt
django/easydex/: asgi.py  settings.py  urls.py  wsgi.py
django/index/: models.py  serializers.py  urls.py  views.py
django/index/migrations/: 0001_initial.py  0002_rename_indicator_index.py  0003_remove_index_content_remove_index_title_and_more.py
django/scraper/scraper/: apps.py  func.py  items.py  middlewares.py  pipelines.py  settings.py
django/scraper/scraper/spiders/: crawler.py  utils.py
