[tool.poetry]
name = "easydex-back"
version = "0.1.0"
description = "easydex revive"
authors = ["suhyuk <isuh88@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
apscheduler = "3.10.1"
asgiref = "3.7.2"
async-timeout = "4.0.2"
attrs = "23.1.0"
automat = "22.10.0"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
colorama = "0.4.6"
constantly = "15.1.0"
cryptography = "41.0.2"
cssselect = "1.2.0"
dataclasses-json = "0.5.13"
django = "4.2.3"
django-apscheduler = "0.6.2"
django-cors-headers = "4.2.0"
django-environ = "0.10.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
filelock = "3.12.2"
frozenlist = "1.4.0"
greenlet = "2.0.2"
hyperlink = "21.0.0"
idna = "3.4"
incremental = "22.10.0"
itemadapter = "0.8.0"
itemloaders = "1.1.0"
jmespath = "1.0.1"
langchain = "0.0.244"
langsmith = "0.0.14"
lxml = "4.9.3"
marshmallow = "3.20.1"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numexpr = "2.8.4"
numpy = "1.25.1"
openai = "0.27.8"
openapi-schema-pydantic = "1.2.4"
packaging = "23.1"
pandas = "2.0.3"
parsel = "1.8.1"
protego = "0.2.1"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "1.10.12"
pydispatcher = "2.0.7"
pyjwt = "2.8.0"
pyopenssl = "23.2.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
pyyaml = "6.0.1"
queuelib = "1.6.2"
regex = "2023.6.3"
requests = "2.31.0"
requests-file = "1.5.1"
scrapy = "2.9.0"
scrapy-djangoitem = "1.1.1"
service-identity = "23.1.0"
six = "1.16.0"
sqlalchemy = "2.0.19"
sqlparse = "0.4.4"
tenacity = "8.2.2"
tiktoken = "0.4.0"
tldextract = "3.4.4"
tqdm = "4.65.0"
twisted = "22.10.0"
typing-inspect = "0.9.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
tzlocal = "5.0.1"
urllib3 = "2.0.4"
w3lib = "2.1.1"
yarl = "1.9.2"
zope-interface = "6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
